--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,10 @@
-body{
+.page-content{
   background: #f9f9f9;
   color: #303030;
   font-family: "Georgia", serif
 }
 
-header.site-header{
+.site-header{
   font-family: "Georgia", serif;
   background: #33495f;
   color: #f9f9f9;
@@ -12,4 +12,5 @@ header.site-header{
 
 .site-title:before{
   content: "Arc;Rewrite";
+  color: #f9f9f9;
 }
