--- a/custom.css
+++ b/custom.css
@@ -4,7 +4,7 @@
   font-family: "Georgia", serif
 }
 
-.site-header{
+header.site-header{
   font-family: "Georgia", serif;
   background: #33495f;
   color: #f9f9f9;
@@ -14,4 +14,4 @@
   content: "Arc;Rewrite by ";
 }
 
-.site-title{color: #33495f;}
+.site-title{color: #f9f9f9;}
