--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,19 @@
 ---
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
+<header class="masthead">
+  <h1 class="masthead-title--small">
+    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+  </h1>
+</header>
+<div class="content post h-entry">
 	{% if page.microblog == false %}
-	  	<h1>{{ page.title }}</h1>
-  	{% endif %}
-    <p class="post-meta"><time class="dt-published" datetime="{{ page.date }}">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content e-content">
-	{{ content }}
-  </article>
-
+		<h1 class="page-title">{{ page.title }}</h1>
+	{% endif %}
+  <div class="post-date">
+    <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
+  </div>
+  <div class="e-content">
+  {{ content }}
+  </div>
 </div>
