--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,7 @@
 ---
 layout: default
+css_class: single
 ---
-<header class="masthead">
-  <h1 class="masthead-title--small">
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-  </h1>
-</header>
-<div class="content page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
-</div>
+<h1>{{ page.title }}</h1>
+
+{{ content }}
